feat: add configuration of allowed formats
