# src/main/webui/openapi/openapi.yaml
@@ -2,6 +2,13 @@
 openapi: 3.1.0
 components:
   schemas:
+    ConfigDto:
+      type: object
+      properties:
+        allowedFormats:
+          type: array
+          items:
+            type: string
     DownloadDto:
       type: object
       properties:
@@ -105,6 +112,19 @@ components:
         coverUrl:
           type: string
 paths:
+  /api/config:
+    get:
+      summary: Expose server configuration to the UI
+      operationId: getConfig
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ConfigDto"
+      tags:
+      - Config Resource
   /api/downloads:
     get:
       summary: "List downloads, most recent first"
@@ -205,7 +225,7 @@ paths:
       - Search Resource
 info:
   title: nana API
-  version: 0.1.0
+  version: 0.2.1-SNAPSHOT
 servers:
 - url: http://localhost:8080
   description: Auto generated value
